Start apps from Test