@@ -3,6 +3,7 @@ package com.balarawool.vtdemo;
 import com.balarawool.vtdemo.util.HttpUtil;
 import org.junit.jupiter.api.Test;
 
+import java.io.IOException;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.StructuredTaskScope;
 import java.util.stream.IntStream;
@@ -12,62 +13,72 @@ import static org.junit.jupiter.api.Assertions.*;
 class VirtualThreadsTest {
 
     @Test
-    // Set GreeterClientApp.USE_VIRTUAL_THREADS to false and start it.
-    // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 1.
-    // And start GreeterApp.
     void runWithGreeterAppThreadPool1() {
-        runTest(3, 2, 4);
+        runTest(false, 1, 3, 2, 4);
     }
 
     @Test
-    // Set GreeterClientApp.USE_VIRTUAL_THREADS to false and start it.
-    // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 10.
-    // And start GreeterApp.
     void runWithGreeterAppThreadPool10() {
-        runTest(10, 10, 11);
+        runTest(false, 10, 10, 10, 12);
     }
 
     @Test
-    // Set GreeterClientApp.USE_VIRTUAL_THREADS to false and start it.
-    // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 100.
-    // And start GreeterApp.
     void runWithGreeterAppThreadPool100() {
-        runTest(100, 1, 109);
+        runTest(false, 100, 100, 100, 109);
     }
 
     @Test
-    // Set GreeterClientApp.USE_VIRTUAL_THREADS to true and start it.
-    // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 1.
-    // And start GreeterApp.
     void runWithVTAndGreeterAppThreadPool1() {
-        runTest(3, 2, 4);
+        runTest(true, 1, 3, 2, 4);
     }
 
     @Test
-    // Set GreeterClientApp.USE_VIRTUAL_THREADS to true and start it.
-    // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 10.
-    // And start GreeterApp.
     void runWithVTAndGreeterAppThreadPool10() {
-        runTest(10, 1, 2);
+        runTest(true, 10, 10, 1, 2);
     }
 
     @Test
-    // Set GreeterClientApp.USE_VIRTUAL_THREADS to true and start it.
-    // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 100.
-    // And start GreeterApp.
     void runWithVTAndGreeterAppThreadPool100() {
-        runTest(100, 1, 2);
+        runTest(true, 100, 100, 1, 2);
     }
 
     @Test
-        // Set GreeterClientApp.USE_VIRTUAL_THREADS to true and start it.
-        // Then set GreeterApp.PLATFORM_THREADS_POOL_SIZE to 1000.
-        // And start GreeterApp.
-    void runWithGreeterAppThreadPool1000() {
-        runTest(1000, 1, 2);
+    void runWithVTAndGreeterAppThreadPool1000() {
+        runTest(true, 1000, 1000, 1, 2.5);
     }
 
-    void runTest(int numRequests, int minTime, int maxTime) {
+    public void runTest(boolean useVirtualThreadsForClientApp, int threadPoolSizeForGreeterApp, int numRequests, int minTime, double maxTime) {
+        var greeterClientApp = startApp(STR."com.balarawool.vtdemo.GreeterClientApp --useVT=\{useVirtualThreadsForClientApp}");
+        var greeterApp = startApp(STR."com.balarawool.vtdemo.GreeterApp --threadPoolSize=\{threadPoolSizeForGreeterApp}");
+
+        try {
+            sendRequestsAndAssert(numRequests, minTime, maxTime);
+        }
+        finally {
+            greeterClientApp.destroy();
+            greeterApp.destroy();
+        }
+    }
+
+    private Process startApp(String app) {
+        var line = STR."""
+                    /Users/TS90XD/.sdkman/candidates/java/23.ea.16-open/bin/java \
+                        --enable-preview \
+                        -classpath /Users/TS90XD/dev/java/loom/virtual-threads-demo/virtual-threads-demo/target/classes \
+                        --add-opens=java.base/java.lang=ALL-UNNAMED \
+                        \{app}
+                    """;
+        try {
+            var process = new ProcessBuilder(line.trim().split("\s+")).start();
+            //Thread.sleep(1_000); //Uncomment if process cannot be started properly in time.
+            System.out.println(STR."App started: \{app}");
+            return process;
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    void sendRequestsAndAssert(int numRequests, double minTime, double maxTime) {
         try (var scope = new StructuredTaskScope.ShutdownOnFailure()) {
             var t1 = System.currentTimeMillis();
             var tasks = IntStream.range(0, numRequests)
